--- a/global.css
+++ b/global.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "Space";
-    src: url("/public/fonts/SpaceMono-Bold.ttf");
+    src: url("/fonts/SpaceMono-Bold.ttf");
     font-weight: bold;
     font-style: normal;
 }
@@ -13,7 +13,7 @@
 
 @font-face {
     font-family: "Space";
-    src: url("/public/fonts/SpaceMono-Regular.ttf");
+    src: url("/fonts/SpaceMono-Regular.ttf");
     font-weight: regular;
     font-style: normal;
 }
