--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ const { title } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en" class="bg-background">
+<html lang="en" class="bg-gradient-to-br from-background to-background2">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
@@ -19,7 +19,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="font-space">
+  <body class="font-space text-text">
     <div class="relative flex flex-col h-screen">
       <Nav client:load />
       <main class="p-5 flex flex-col items-center">
@@ -68,4 +68,6 @@ const { title } = Astro.props;
   } else {
     document.documentElement.classList.add("system");
   }
+
+  console.log("Theme layout", theme);
 </script>
