--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import ReviewCard from "../components/ReviewCard";
 import { Divider, ScrollShadow, Spacer } from "@nextui-org/react";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Antoine ANDO">
   <h1 class="text-accent text-7xl font-bold">Antoine ANDO</h1>
   <h2 class="text-2xl">Front-end Javascript Developer</h2>
 
