--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,55 +1,129 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import ReviewCard from "../components/ReviewCard";
-import { Divider, ScrollShadow, Spacer } from "@nextui-org/react";
+import { Envelope } from "../components/icons/Envelope";
+import { Button, Divider } from "@nextui-org/react";
 ---
 
 <Layout title="Antoine ANDO">
-  <h1 class="text-accent text-7xl font-bold">Antoine ANDO</h1>
-  <h2 class="text-2xl">Front-end Javascript Developer</h2>
-
-  <h3 class="text-xl">
-    But don't take my word for it, here's what my clients have to say about me:
-  </h3>
-  <ScrollShadow
-    orientation="horizontal"
-    hideScrollBar
-    className="flex flex-row gap-5 overflow-y-auto p-5 w-4/5"
+  <!-- Header -->
+  <div
+    class="relative flex flex-col items-center justify-center min-h-[75%] gap-0 sm:gap-1 text-center"
   >
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-    <ReviewCard name="Julien Cantin" company="CollecOnline" imageFallback="J">
-      Une mission rapide et efficace. Antoine a mené à bien sa mission et la
-      terminée plus rapidement que prévu. Je recommande fortement Antoine pour
-      ses compétences et son sérieux.
-    </ReviewCard>
-  </ScrollShadow>
+    <div
+      class="sun w-[75%] lg:w-1/2 aspect-square rounded-full absolute shadow-eclipse top-0 bottom-0 m-auto"
+    >
+    </div>
+    <h1 class="text-accent text-[11vw] sm:text-5xl md:text-8xl font-bold z-10">
+      Antoine ANDO
+    </h1>
+    <h2 class="text-[4vw] md:text-4xl z-10 text-white">
+      Front-end Javascript Developer
+    </h2>
+  </div>
+
+  <!-- Content -->
+  <div class="flex flex-col w-full gap-10 text-center items-center">
+    <!-- Intro -->
+    <div
+      class="flex flex-col w-full md:w-4/5 gap-5 text-xl md:text-2xl text-text p-5"
+    >
+      <p>
+        Hi, I'm Antoine, a front-end developer from France based in South Korea.
+        I have been working in the web development industry for over 5 years
+        now.
+      </p>
+      <p>
+        I specialize in building web applications using modern technologies such
+        as React, Next.js, and Tailwind CSS. I am passionate about creating
+        beautiful and user-friendly interfaces.
+      </p>
+
+      <!-- Link to about page -->
+      <div class="flex justify-end mt-2">
+        <a href="/about" class="group text-text-accent flex gap-5 items-center">
+          More about me
+          <button
+            class="flex items-center justify-center rounded-full text-3xl w-14 h-14 border-solid border-white border-2 group-hover:border-3 transition-all"
+          >
+            >
+          </button></a
+        >
+      </div>
+    </div>
+
+    <Divider className="mt-16" />
+
+    <!-- Recommendation section -->
+    <div class="flex flex-col gap-10 md:mt-40 items-center">
+      <p class="text-xl md:text-2xl w-fit p-5">
+        But don't take my word for it, here's what my clients have to say about
+        me:
+      </p>
+
+      <!-- Cards container -->
+      <div
+        class="flex w-full gap-5 flex-nowrap md:flex-wrap justify-start md:justify-center text-xl overflow-y-auto pl-6 pr-6 pb-6 mx-[-20px] md:mx-0"
+      >
+        <ReviewCard
+          name="Julien Cantin"
+          company="CollecOnline"
+          imageFallback="J"
+          detail="React, ThreeJS"
+        >
+          Une mission rapide et efficace. Antoine a mené à bien sa mission et la
+          terminée plus rapidement que prévu. Je recommande fortement Antoine
+          pour ses compétences et son sérieux.
+        </ReviewCard>
+        <ReviewCard
+          name="Julien Cantin"
+          company="CollecOnline"
+          imageFallback="J"
+        >
+          lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate.
+        </ReviewCard>
+      </div>
+    </div>
+
+    <!-- Contact section -->
+    <div class="flex flex-col gap-10 mt-20 items-center">
+      <h3 class="text-xl md:text-2xl w-fit">
+        <span class="text-3xl">↑↑↑</span>
+        <br />
+        This&nbsp;could&nbsp;be&nbsp;you, let's&nbsp;work&nbsp;together!
+      </h3>
+
+      <Button
+        isIconOnly
+        variant="bordered"
+        aria-label="Send email"
+        className="fill-white p-2 border-2 border-white hover:border-3 transition-all"
+        size="lg"
+        radius="full"
+        data-email-button
+      >
+        <Envelope />
+      </Button>
+
+      <p class="text-md text-slate-300">
+        Send me an email with your project details and let's find a way to
+        collaborate!
+      </p>
+    </div>
+  </div>
 </Layout>
+<script>
+  //onclick function
+  function sendEmail() {
+    window.location.href = "mailto:antoine.ando@protonmail.com";
+  }
+
+  const button = document.querySelector("[data-email-button]");
+  if (button) {
+    button.addEventListener("click", sendEmail);
+  }
+</script>
