Sanity added + project page WIP

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ Astro.response.headers.set(
 
     <div class="relative flex flex-col h-screen">
       <Navigation />
-      <main class="flex flex-col items-center overflow-y-auto pb-20">
+      <main class="flex flex-col items-center overflow-y-auto">
         <slot />
       </main>
     </div>
