--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,22 +8,22 @@ import { Button, Divider } from "@nextui-org/react";
 <Layout title="Antoine ANDO">
   <!-- Header -->
   <div
-    class="relative flex flex-col items-center justify-center min-h-[75%] gap-0 sm:gap-1 text-center"
+    class="relative flex flex-col items-center justify-center min-h-[100%] gap-0 sm:gap-1 text-center"
   >
     <div
-      class="sun w-[75%] lg:w-1/2 aspect-square rounded-full absolute shadow-eclipse top-0 bottom-0 m-auto"
+      class="sun w-3/4 aspect-square rounded-full absolute dark:shadow-eclipse shadow-lightEclipse"
     >
     </div>
     <h1 class="text-accent text-[11vw] sm:text-5xl md:text-8xl font-bold z-10">
       Antoine ANDO
     </h1>
-    <h2 class="text-[4vw] md:text-4xl z-10 text-white">
+    <h2 class="text-[4vw] md:text-4xl z-10 text-accent2">
       Front-end Javascript Developer
     </h2>
   </div>
 
   <!-- Content -->
-  <div class="flex flex-col w-full gap-10 text-center items-center">
+  <div class="flex flex-col w-full gap-10 text-center items-center mb-44">
     <!-- Intro -->
     <div
       class="flex flex-col w-full md:w-4/5 gap-5 text-xl md:text-2xl text-text p-5"
@@ -41,10 +41,10 @@ import { Button, Divider } from "@nextui-org/react";
 
       <!-- Link to about page -->
       <div class="flex justify-end mt-2">
-        <a href="/about" class="group text-text-accent flex gap-5 items-center">
+        <a href="/about" class="group text-accent2 flex gap-5 items-center">
           More about me
           <button
-            class="flex items-center justify-center rounded-full text-3xl w-14 h-14 border-solid border-white border-2 group-hover:border-3 transition-all"
+            class="flex items-center justify-center rounded-full text-3xl w-14 h-14 border-solid border-accent2 border-2 group-hover:border-3 transition-all"
           >
             >
           </button></a
@@ -101,7 +101,7 @@ import { Button, Divider } from "@nextui-org/react";
         isIconOnly
         variant="bordered"
         aria-label="Send email"
-        className="fill-white p-2 border-2 border-white hover:border-3 transition-all"
+        className="fill-accent2 p-2 border-2 border-accent2 hover:border-3 transition-all"
         size="lg"
         radius="full"
         data-email-button
@@ -109,7 +109,7 @@ import { Button, Divider } from "@nextui-org/react";
         <Envelope />
       </Button>
 
-      <p class="text-md text-slate-300">
+      <p class="text-md text-text">
         Send me an email with your project details and let's find a way to
         collaborate!
       </p>
