--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,7 +1,16 @@
 ---
+import type { GetStaticPaths } from "astro";
 import { Navbar, NavbarBrand, NavbarContent } from "@nextui-org/react";
 import ThemeButton from "./ThemeButton.astro";
 import NavContent from "./NavContent.jsx";
+
+// export async function getStaticPaths() {
+//   return [
+//     { params: { client: "load" } },
+//     { params: { client: "ssr" } },
+//   ];
+
+// }
 ---
 
 <div class="flex">
