Eclipse width changed

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import { Button, Divider } from "@nextui-org/react";
     class="relative flex flex-col items-center justify-center min-h-[100%] gap-0 sm:gap-1 text-center"
   >
     <div
-      class="sun w-3/4 aspect-square rounded-full absolute dark:shadow-eclipse shadow-lightEclipse"
+      class="sun w-[60%] aspect-square rounded-full absolute dark:shadow-eclipse shadow-lightEclipse"
     >
     </div>
     <h1 class="text-accent text-[11vw] sm:text-5xl md:text-8xl font-bold z-10">
