--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,7 @@
 ---
 import { Divider, Spacer } from "@nextui-org/react";
 import Layout from "../layouts/Layout.astro";
+import { Github } from "../components/icons/Github";
 ---
 
 <Layout title="About me - Antoine Ando">
@@ -8,7 +9,10 @@ import Layout from "../layouts/Layout.astro";
   <div class="flex flex-col gap-5 md:w-3/4">
     <!-- Content -->
     <div class="p-5 flex flex-col w-full gap-3 md:text-medium">
-      <h2 class="text-2xl md:text-4xl font-bold">ABOUT ME</h2>
+      <div class="flex items-baseline gap-3 flex-col md:flex-row">
+        <h2 class="text-4xl font-bold">ABOUT ME</h2>
+        <span>Who I am and what I do</span>
+      </div>
       <p>
         Over 7 years of experience in web development, I have worked on various
         projects, from small websites to large web applications.
@@ -33,8 +37,11 @@ import Layout from "../layouts/Layout.astro";
 
     <!-- Skills -->
     <div class="p-5 pt-10 w-full gap-3 flex flex-col">
-      <h2 class="text-4xl font-bold">SKILLS</h2>
-      <div class="grid grid-cols-2 gap-5">
+      <div class="flex items-baseline gap-3 flex-col md:flex-row">
+        <h2 class="text-4xl font-bold">TECHNOLOGIES</h2>
+        <span>Stuff I use and like to use</span>
+      </div>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
         <div>
           <h3 class="text-xl font-bold">Front-end</h3>
           <ul>
@@ -68,6 +75,34 @@ import Layout from "../layouts/Layout.astro";
             <li>Figma</li>
             <li>Photoshop</li>
           </ul>
+        </div>
+      </div>
+    </div>
+
+    <Divider />
+
+    <!-- Socials -->
+    <div class="p-5 pt-10 w-full gap-3 flex flex-col">
+      <div class="flex items-baseline gap-3 flex-col md:flex-row">
+        <h2 class="text-4xl font-bold">SOCIALS</h2>
+        <span>Where you can find me</span>
+      </div>
+      <div class="grid grid-cols-2 md:grid-cols-3 gap-5">
+        <a
+          href="https://github.com/antoineando"
+          target="_blank"
+          class="fill-text flex flex-col items-center"
+        >
+          <div class="h-[50px] w-[50px]">
+            <Github />
+          </div>
+          <h3 class="text-xl font-bold">GitHub</h3>
+        </a>
+        <div>
+          <h3 class="text-xl font-bold">LinkedIn</h3>
+          <a href="https://www.linkedin.com/in/antoineando/" target="_blank"
+            >antoineando</a
+          >
         </div>
       </div>
     </div>
