--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -11,23 +11,29 @@ export const getStaticPaths = (async () => {
         title,
         slug,
         shortDescription,
-        ${picture("mainImage")}
+        ${picture("mainImage")},
+        description
     }`
   );
 
   return projects.map((project: any) => {
+    console.log(project);
     return {
       params: { title: project.title, slug: project.slug.current },
       props: {
         title: project.title,
+        mainImage: project.mainImage.asset.url,
       },
     };
   });
 }) satisfies GetStaticPaths;
 
-const { title } = Astro.props;
+const { title, mainImage } = Astro.props;
 ---
 
 <Layout title={title + " - Antoine Ando"}>
-  <h1>{title}</h1>
+  <h1 class="text-4xl mb-5">{title}</h1>
+  <div class="w-1/2">
+    <img src={mainImage} alt="Main image" class="" />
+  </div>
 </Layout>
