--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -2,8 +2,7 @@
 import type { GetStaticPaths } from "astro";
 import Layout from "../../layouts/Layout.astro";
 import { sanityClient } from "sanity:client";
-import SanityPicture, { picture } from "astro-sanity-picture";
-import project from "../../../sanity/schemas/project";
+import { picture } from "astro-sanity-picture";
 
 export const getStaticPaths = (async () => {
   const projects = await sanityClient.fetch(
