--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,18 @@ import { Button, Divider } from "@nextui-org/react";
         <a href="/about" class="group text-accent2 flex gap-5 items-center">
           More about me
           <button
-            class="flex items-center justify-center rounded-full text-3xl w-14 h-14 border-solid border-accent2 border-2 group-hover:border-3 transition-all"
+            class="flex items-center justify-center rounded-full
+            text-3xl w-14 h-14 border-solid border-accent2 border-2
+            relative
+            
+            before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0
+            before:margin-auto
+            before:outline-accent2 before:outline-dashed
+            before:outline-2
+            before:rounded-full
+            before:w-full before:h-full
+            
+            group-hover:before:animate-ping"
           >
             >
           </button></a
@@ -97,17 +108,19 @@ import { Button, Divider } from "@nextui-org/react";
         This&nbsp;could&nbsp;be&nbsp;you, let's&nbsp;work&nbsp;together!
       </h3>
 
-      <Button
-        isIconOnly
-        variant="bordered"
-        aria-label="Send email"
-        className="fill-accent2 p-2 border-2 border-accent2 hover:border-3 transition-all"
-        size="lg"
-        radius="full"
-        data-email-button
-      >
-        <Envelope />
-      </Button>
+      <div class="relative">
+        <Button
+          isIconOnly
+          variant="bordered"
+          aria-label="Send email"
+          className="fill-accent2 p-2 border-2 border-accent2 overflow-visible before:absolute before:top-0 before:left-0 before:bottom-0 before:right-0 before:margin-auto before:outline-accent2 before:outline-dashed before:outline-2 before:rounded-full before:w-full before:h-full hover:before:animate-ping"
+          size="lg"
+          radius="full"
+          data-email-button
+        >
+          <Envelope />
+        </Button>
+      </div>
 
       <p class="text-md text-text">
         Send me an email with your project details and let's find a way to
