--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,12 +81,14 @@ import { Button, Divider } from "@nextui-org/react";
           subtitle="CollecOnline"
           imageFallback="J"
           detail="React, ThreeJS"
+          translation="A fast and efficient mission. Antoine carried out his mission and completed it more quickly than expected. I highly recommend Antoine for his skills and reliability."
+          client:load
         >
           Une mission rapide et efficace. Antoine a mené à bien sa mission et la
           terminée plus rapidement que prévu. Je recommande fortement Antoine
           pour ses compétences et son sérieux.
         </CardComponent>
-        <CardComponent
+        <!-- <CardComponent
           title="Julien Cantin"
           subtitle="CollecOnline"
           imageFallback="J"
@@ -96,7 +98,7 @@ import { Button, Divider } from "@nextui-org/react";
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat. Duis aute irure dolor in
           reprehenderit in voluptate.
-        </CardComponent>
+        </CardComponent> -->
       </div>
     </div>
 
