--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,10 +21,25 @@ Astro.response.headers.set(
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
 
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"
+    ></script>
+
     <slot name="head" />
     <title>{title}</title>
   </head>
   <body class="font-space text-text">
+    <script is:inline>
+      // use a script tag or an external JS file
+      document.addEventListener("DOMContentLoaded", (event) => {
+        gsap.registerPlugin(ScrollTrigger);
+        // gsap code here!
+      });
+    </script>
     <!-- Theme script -->
     <script is:inline>
       (function () {
