--- a/global.css
+++ b/global.css
@@ -3,6 +3,10 @@
 @tailwind utilities;
 
 
+:root {
+    --line-width: 0%;
+}
+
 @font-face {
     font-family: "Space";
     src: url("/fonts/SpaceMono-Bold.ttf");
